--- a/sauce.html
+++ b/sauce.html
@@ -1,5 +1,7 @@
 <divz>
   asd okidokiy sauce
   <buttonz (click)="monclickittyclick()"></buttonz>
+  
+  <button (click)="lel()"></button>
 </divz>
 lol
