--- a/sauce.html
+++ b/sauce.html
@@ -3,5 +3,8 @@
   <buttonz (click)="monclickittyclick()"></buttonz>
   
   <button (click)="lel()"></button>
+  <button (click)="lel()"></button>
+  <button (click)="lel()"></button>
+  <button (click)="lel()"></button>
 </divz>
 lol
