--- a/sauce.html
+++ b/sauce.html
@@ -6,5 +6,7 @@
   <button (click)="lel()"></button>
   <button (click)="lel()"></button>
   <button (click)="lel()"></button>
+  
+  <button (click)="lelelel()"></button>
 </divz>
 lol
